--- a/AndroidApplication/app/src/main/AndroidManifest.xml
+++ b/AndroidApplication/app/src/main/AndroidManifest.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+      Created by Dailin Luo
+      Unless specified as personal contribution, this class is adapted from website:
+      http://www.androidtutorialshub.com/android-login-and-register-with-sqlite-database-tutorial/
+ -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.buckybarnes.androidapplication">
+    package="com.example.buckybarnes.test">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:label="@string/app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".webview"></activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:label="2"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".UsersListActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".webview" />
     </application>
+
 
 </manifest>
